run prettier formatter
